--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -268,6 +268,12 @@
                           class="material-icons">shuffle</i>
                       </button>
 
+                      <button type="button" class="btn btn-custom" (click)="toggleSequentialResponse(activeRoute.sequentialResponse)" ngbTooltip="Sequential response (will disable the rules)">
+                        <i
+                          [ngClass]="{'text-primary': activeRoute.sequentialResponse}"
+                          class="material-icons">format_list_numbered</i>
+                      </button>
+
                       <!-- Route responses dropdown -->
                       <div class="btn-group" ngbDropdown>
                         <button type="button" class="btn btn-custom dropdown-toggle dropdown-toggle-split mr-1"
